<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/black"
    android:paddingEnd="@dimen/default_padding"
    android:paddingBottom="@dimen/default_half_padding"
    tools:ignore="RtlSymmetry">

    <ImageView
        android:id="@+id/image"
        android:layout_width="100dp"
        android:layout_height="150dp"
        android:layout_marginStart="@dimen/default_margin"
        android:layout_marginTop="@dimen/default_half_margin"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_launcher_background"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/name_film"
        android:layout_width="0dp"
        android:layout_height="30dp"
        android:layout_marginStart="@dimen/default_margin"
        android:layout_marginTop="@dimen/default_half_margin"
        android:ellipsize="end"
        android:maxLines="2"
        android:text="@string/film_name"
        android:textColor="@color/white"
        android:textSize="@dimen/font_for_items"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/image" />

    <TextView
        android:id="@+id/genre"
        android:layout_width="match_parent"
        android:layout_height="16dp"
        android:layout_marginStart="@dimen/default_margin"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="@dimen/default_margin"
        android:text="@string/genre"
        android:textColor="@color/white"
        android:textSize="@dimen/font_for_items"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/name_film" />

    <TextView
        android:id="@+id/rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/default_half_padding"
        android:paddingEnd="@dimen/default_half_padding"
        android:layout_marginStart="@dimen/default_half_margin"
        android:layout_marginTop="@dimen/default_margin"
        android:background="@color/green_rating"
        android:text="@string/rating"
        android:textColor="@color/white"
        android:textSize="@dimen/font_for_items"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>